--- a/CSS/main.css
+++ b/CSS/main.css
@@ -349,8 +349,8 @@
   }
   
   .check-label input:checked + .check-round {
-    background-image: url(../images/icon-check.svg), -webkit-gradient(linear, left top, left bottom, from(#57ddff), to(#c058f3));
-    background-image: url(../images/icon-check.svg), linear-gradient(#57ddff, #c058f3);
+    background-image: url(images/icon-check.svg), -webkit-gradient(linear, left top, left bottom, from(#57ddff), to(#c058f3));
+    background-image: url(images/icon-check.svg), linear-gradient(#57ddff, #c058f3);
     background-repeat: no-repeat;
     background-position: center;
     width: 25px;
